--- a/views/student.ejs
+++ b/views/student.ejs
@@ -16,13 +16,14 @@
 
     <div class="container text-center">
       <div class="row">
-        <% for (let index = 0; index < 4; index++) { %>
+        <% for (book of books) { %>
         <div class="col">
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                <%= book.bookName %>
+                <br />
+                <%= book._id %>
               </p>
             </div>
           </div>
@@ -30,6 +31,12 @@
         <% } %>
       </div>
     </div>
+    <h2>Issue books</h2>
+
+    <form action="/issue" method="post">
+      <input type="text" placeholder="add book id" name="id" />
+      <button>Submit</button>
+    </form>
 
     <%- include("partials/footer.ejs") %>
     <script
