--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,26 +12,33 @@
     />
   </head>
   <body>
-    <%- include("partials/navbar.ejs") %>
+    <!-- <%- include("partials/navbar.ejs") %> -->
 
-    <div class="container text-center">
-      <div class="row">
-        <% for (let index = 0; index < 4; index++) { %>
-        <div class="col">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-        </div>
-        <% } %>
+    <h1>Add Books</h1>
+    <form action="/admin" method="post">
+      <input type="text" placeholder="enter new book name" name="bookName" />
+      <input type="text" placeholder="enter author name" name="authorName" />
+
+      <button>Submit</button>
+    </form>
+
+    <br>
+    <hr>
+    <h1>List of all available books</h1>
+    <% for(bookdata of bookDatas) { %>
+      <div>
+        <ul>
+          <li><%= bookdata.bookName %></li>  
+        </ul>
       </div>
-    </div>
+      
 
-    <%- include("partials/footer.ejs") %>
+    <%}%>
+
+
+    
+
+    <!-- <%- include("partials/footer.ejs") %> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
