--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" href="http://localhost:3000/search">Search</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://localhost:3000/logout">Logout</a>
+        </li>
       </ul>
     </div>
   </div>
