--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,34 +12,76 @@
     />
   </head>
   <body>
-    <!-- <%- include("partials/navbar.ejs") %> -->
+    <div class="d-flex justify-content-around mt-4 mx-4">
+      <form action="/admin" method="post" >
+        <h1>Add Book</h1>
+        <div class="form-group mb-2">
+          <label for="exampleInputEmail1">Book Name</label>
+          <input
+            type="text"
+            placeholder="Enter Book Name"
+            name="bookName"
+            class="form-control"
+            aria-describedby="emailHelp"
+          />
+        </div>
+        <div class="form-group mb-2">
+          <label for="exampleInputPassword1">Author Name</label>
+          <input
+            type="text"
+            placeholder="Enter Author Name"
+            name="authorName"
+            class="form-control"
+          />
+        </div>
+        <button type="submit" class="btn btn-dark">Submit</button>
+      </form>
 
-    <h1>Add Books</h1>
-    <form action="/admin" method="post">
-      <input type="text" placeholder="enter new book name" name="bookName" />
-      <input type="text" placeholder="enter author name" name="authorName" />
-
-      <button>Submit</button>
-    </form>
-
-    <br />
-    <hr />
-    <h1>List of all available books</h1>
-    <% for(bookdata of bookDatas) { %>
-    <div>
-      <ul>
-        <li>
-          <%= bookdata.bookName %>
-          <form method="post" action="/books/<%=bookdata.id%>?_method=DELETE">
-            <button type="submit">DELETE</button>
-          </form>
-        </li>
-      </ul>
+      <form action="/show" method="post" class="mx-4">
+        <h1>User Data</h1>
+        <label for="exampleInputEmail1">User Name</label>
+        <input
+          type="gmail"
+          placeholder="Enter Username"
+          name="userName"
+          class="form-control mb-2"
+          aria-describedby="emailHelp"
+        />
+        <button class="btn btn-dark">Submit</button>
+      </form>
     </div>
 
-    <%}%>
+    <hr />
 
-    <!-- <%- include("partials/footer.ejs") %> -->
+    <h1 class="mx-4">List of all available books</h1>
+    <div class="container text-center">
+      <div class="row">
+        <% for(bookdata of bookDatas) { %>
+        <div class="card mb-2 mx-2" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title"><%= bookdata.bookName %></h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              Author Name: <%= bookdata.authorName %>
+            </li>
+            <li class="list-group-item">Book ID: <%= bookdata._id %></li>
+            <li class="list-group-item">
+              Issue Status: <%= bookdata.issueStatus %>
+            </li>
+          </ul>
+          <form
+            method="post"
+            action="/books/<%=bookdata.id%>?_method=DELETE"
+            class="my-2"
+          >
+            <button type="submit" class="btn btn-dark">DELETE</button>
+          </form>
+        </div>
+        <%}%>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
