--- a/views/student.ejs
+++ b/views/student.ejs
@@ -32,14 +32,14 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Author name: <%= book.authorName %></li>
             <li class="list-group-item">Book ID: <%= book._id %></li>
-            <li class="list-group-item">Issue Status: <%= book.issueStatus %></li>
+            <li class="list-group-item">
+              Issue Status: <%= book.issueStatus %>
+            </li>
           </ul>
         </div>
         <% } %>
       </div>
     </div>
-
-    <%- include("partials/footer.ejs") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
