--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body
+    style="
+      background-image: url('https://png.pngtree.com/background/20230427/original/pngtree-an-old-library-or-book-room-with-some-books-and-plants-picture-image_2496727.jpg');
+    "
+  >
     <form action="/login" method="post">
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
@@ -37,7 +41,7 @@
                 />
                 <label for="floatingPassword">Password</label>
               </div>
-              <button class="w-100 btn btn-lg btn-primary" type="submit">
+              <button class="w-100 btn btn-lg btn-dark" type="submit">
                 Login
               </button>
             </form>
