--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,20 +15,21 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            aria-current="page"
-            href="http://localhost:3000/issue"
-            >Issue</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://localhost:3000/search">Search</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="http://localhost:3000/logout">Logout</a>
         </li>
       </ul>
     </div>
+    <form class="form-inline d-flex" action="/search" method="post">
+      <input
+        class="form-control mr-sm-2"
+        type="search"
+        name="id"
+        placeholder="Search Book"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        Search
+      </button>
+    </form>
   </div>
 </nav>
