--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body
+    style="
+      background-image: url('https://png.pngtree.com/background/20230427/original/pngtree-an-old-library-or-book-room-with-some-books-and-plants-picture-image_2496727.jpg');
+    "
+  >
     <form action="/signup" method="post">
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
@@ -40,8 +44,7 @@
               <button class="w-100 btn btn-lg btn-primary" type="submit">
                 Sign up
               </button>
-              <hr class="my-4" />
-              <small class="text-muted"
+              <small class="text-white"
                 >By clicking Sign up, you agree to the terms of use.</small
               >
             </form>
