--- a/views/student.ejs
+++ b/views/student.ejs
@@ -39,6 +39,8 @@
             <li class="list-group-item">
               Issue Status: <%= book.issueStatus %>
             </li>
+            <li class="list-group-item">Issued Date: <%= book.issuedDate %></li>
+            <li class="list-group-item">Due Date: <%= book.dueDate%></li>
           </ul>
         </div>
         <% } %>
