--- a/views/issued.ejs
+++ b/views/issued.ejs
@@ -14,33 +14,33 @@
   <body>
     <!-- <%- include("partials/navbar.ejs") %> -->
 
-    <h1 class="text-center my-4">List of all books issued by <%=showUser.userName %></h1>
+    <h1 class="text-center my-4">
+      List of all books issued by <%=showUser.userName %>
+    </h1>
 
     <div class="container text-center">
-        <div class="row">
-          <% for(book of showUser.books) { %>
-          <div class="card mb-2 mx-2" style="width: 18rem">
-            <div class="card-body">
-              <h5 class="card-title"><%= book.bookName %></h5>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                Author Name: <%= book.authorName %>
-              </li>
-              <li class="list-group-item">Book ID: <%= book._id %></li>
-              <li class="list-group-item">Issue Date: <%= book.dueDate %></li>
-              <li class="list-group-item">Due Date: <%= book.issuedDate %></li>
-            </ul>
-            <form
-              method="post"
-              action="/books/<%=book.id%>?_method=DELETE"
-              class="my-2"
-            >
-              <button type="submit" class="btn btn-dark">Return</button>
-            </form>
+      <div class="row">
+        <% for(book of showUser.books) { %>
+        <div class="card mb-2 mx-2" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title"><%= book.bookName %></h5>
           </div>
-          <%}%>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Author Name: <%= book.authorName %></li>
+            <li class="list-group-item">Book ID: <%= book._id %></li>
+            <li class="list-group-item">Issue Date: <%= book.dueDate %></li>
+            <li class="list-group-item">Due Date: <%= book.issuedDate %></li>
+          </ul>
+          <form
+            method="post"
+            action="/books/delissued/<%=book.id%>?_method=DELETE"
+            class="my-2"
+          >
+            <button type="submit" class="btn btn-dark">Return</button>
+          </form>
         </div>
+        <%}%>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
